refactor(skill): 注入 ZhiweiPaths 替代 SkillConfigProperties.directory